--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-/** use root variables instead */
 :root {
   --font-primary: #f6f7f9;
   --font-secondary: #53687e;
@@ -7,8 +6,7 @@
   --react-logo: #00D8FF;
 }
 
-/** default styling */
-
+/** Default styling */
 * {
   box-sizing: border-box;
   padding: 0;
@@ -23,7 +21,6 @@ body {
   flex-direction: column;
   font-family: "Inter", serif;
   font-optical-sizing: auto;
-  /* font-weight: <weight>; */
   font-style: normal;
   color: var(--font-primary);
 }
@@ -32,7 +29,18 @@ li {
   list-style-type: none;
 }
 
-.course_cover {
+a {
+  all: unset;
+  text-decoration: none;
+  color: inherit;
+}
+
+a:hover {
+  cursor: pointer;
+}
+
+/** Styles for cover */
+.course__cover {
   width: 100%;
   background-color: var(--bg-secondary);
   display: flex;
@@ -42,7 +50,18 @@ li {
   padding: 48px 24px;
 }
 
-.react_svg {
+.course__title {
+  font-size: 40px;
+  text-align: center;
+}
+
+.course__desc {
+  font-size: 32px;
+  text-align: center;
+  font-weight: 500;
+}
+
+.react__svg {
   width: 100px;
   margin-bottom: 16px;
 }
@@ -51,23 +70,11 @@ li {
   width: 20px;
 }
 
-.course_title {
-  font-size: 40px;
-  text-align: center;
-}
-
-.course_desc {
-  font-size: 32px;
-  text-align: center;
-  font-weight: 500;
-}
-
 /** Styles for general layout */
 main {
   display: flex;
   flex-direction: column;
   gap: 32px;
-  /* padding: 24px; */
 }
 
 /** Styles for Header component */
@@ -88,12 +95,6 @@ header {
 .header__title {
   font-weight: 600;
   font-size: 18px;
-}
-
-a {
-  all: unset;
-  text-decoration: none;
-  color: inherit;
 }
 
 .course__links {
@@ -119,7 +120,7 @@ a {
 }
 
 .course__link__alt {
-  border: 1px rgba(246, 247, 249, .05) solid;
+  border: 1px #404756 solid;
 }
 
 /** Styles for CourseCard component */
@@ -138,7 +139,6 @@ a {
   display: flex;
   flex-direction: column;
   gap: 24px;
-  /* box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1); */
 }
 
 .card__title {
@@ -149,7 +149,6 @@ a {
 
 .card__desc {
   font-size: 16px;
-  /* color: var(--font-secondary); */
   color: var(--font-primary);
 }
 
@@ -186,4 +185,68 @@ footer {
   font-weight: 500;
   font-style: italic;
   color: var(--font-primary);
+}
+
+/** Media queries */
+@media screen and (min-width: 1024px) {
+  header {
+    position: relative;
+    border: none;
+    padding: 0 16px;
+  }
+  
+  .header__title {
+    display: none;
+  }
+  
+  .course__cover {
+    padding: 96px 20px 128px 20px;
+    gap: 16px;
+  }
+
+  .course__title {
+    font-size: 64px;
+  }
+
+  .react__svg {
+    width: 120px;
+  }
+
+  .course__links {
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .course__link {
+    width: 180px;
+  }
+
+  .cards__container {
+    width: 1000px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 96px auto 96px auto;
+  }
+
+  .card__title {
+    font-size: 32px;
+  }
+
+  .card__desc {
+    font-size: 18px;
+    flex-grow: 1;
+  }
+
+  .card__tags {
+    gap: 12px;
+  }
+
+  .card__tag {
+    font-size: 14px;
+  }
+
+  footer {
+    border: none;
+    padding: 48px;
+  }
 }
